DISTRIBUTION/src/wcslib/wcsfix.h

extern const char *wcsfix_errmsg[];
int wcsfix(int ctrl, const int naxis[], struct wcsprm *wcs, int stat[]);
int unitfix(int ctrl, struct wcsprm *wcs);
int celfix(struct wcsprm *wcs);
int spcfix(struct wcsprm *wcs);